--- a/.github/workflows/pelican.yml
+++ b/.github/workflows/pelican.yml
@@ -6,6 +6,13 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
   build:
     runs-on: ubuntu-latest
