--- a/.github/workflows/pelican.yml
+++ b/.github/workflows/pelican.yml
@@ -20,6 +20,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         submodules: 'true'
+        ssh-key: ${{secrets.GH_PAGES_KEY}}
     - uses: apes-suite/pelican-to-github-pages@v1.3.1
       env:
         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
