--- a/.github/workflows/pelican.yml
+++ b/.github/workflows/pelican.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         submodules: 'true'
         ssh-key: ${{secrets.GH_PAGES_KEY}}
-    - uses: apes-suite/pelican-to-github-pages@v1.3.1
+    - uses: apes-suite/pelican-to-github-pages@deploykey
       env:
         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         GH_PAGES_CNAME: ${{secrets.DOMAIN_CNAME}}
